@@ -1,0 +1,35 @@
+-----BEGIN CERTIFICATE-----
+MIIF4TCCBMmgAwIBAgIQVPm9MeoE7SQFdlULvDppQjANBgkqhkiG9w0BAQsFADBE
+MQswCQYDVQQGEwJVUzEWMBQGA1UEChMNR2VvVHJ1c3QgSW5jLjEdMBsGA1UEAxMU
+R2VvVHJ1c3QgU1NMIENBIC0gRzMwHhcNMTYwMjAxMDAwMDAwWhcNMTcwMTMxMjM1
+OTU5WjBqMQswCQYDVQQGEwJTRTEYMBYGA1UECAwPU1RPQ0tIT0xNUyBMw6ROMQ4w
+DAYDVQQHDAVTb2xuYTESMBAGA1UEChQJU0YgQmlvIEFCMQswCQYDVQQLDAJJVDEQ
+MA4GA1UEAxQHKi5zZi5zZTCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEB
+AKLUmrPm9g2Z12yVD9jnGgk3C2xrdOYqjfjFGOrU2SfTaI1L8POt2s9YspYcKkFG
+5EB7Iv3aIwL0TccsbWT1PaiVvT7hgU94n5fYjjHlMiVMdPpHunGj9KqO12/zz++e
+Qa8xITx5AW3S7CYHIBqxPIU43/6ukXcmsGe4ngbHxhl7nfWcgWT/qxUA7guWqxON
+KNaNOsw4KeJizxhURT52nf5+dJIZ9j/3x8vu+WC8kJ9LQzKdFuFOZ05/Ivwj+WcI
+SbOOaisxaQCdkFMDtTfWPBX9CjEvAEqYsthFj2trvxZYgvnN6zR7eRdAH2chgrh9
+//ljApp85rzAVClGncBZKq0CAwEAAaOCAqcwggKjMBkGA1UdEQQSMBCCByouc2Yu
+c2WCBXNmLnNlMAkGA1UdEwQCMAAwDgYDVR0PAQH/BAQDAgWgMCsGA1UdHwQkMCIw
+IKAeoByGGmh0dHA6Ly9nbi5zeW1jYi5jb20vZ24uY3JsMIGdBgNVHSAEgZUwgZIw
+gY8GBmeBDAECAjCBhDA/BggrBgEFBQcCARYzaHR0cHM6Ly93d3cuZ2VvdHJ1c3Qu
+Y29tL3Jlc291cmNlcy9yZXBvc2l0b3J5L2xlZ2FsMEEGCCsGAQUFBwICMDUMM2h0
+dHBzOi8vd3d3Lmdlb3RydXN0LmNvbS9yZXNvdXJjZXMvcmVwb3NpdG9yeS9sZWdh
+bDAdBgNVHSUEFjAUBggrBgEFBQcDAQYIKwYBBQUHAwIwHwYDVR0jBBgwFoAU0m/3
+lvSFP3I8MH0j2oV4m6N8WnwwVwYIKwYBBQUHAQEESzBJMB8GCCsGAQUFBzABhhNo
+dHRwOi8vZ24uc3ltY2QuY29tMCYGCCsGAQUFBzAChhpodHRwOi8vZ24uc3ltY2Iu
+Y29tL2duLmNydDCCAQMGCisGAQQB1nkCBAIEgfQEgfEA7wB2AN3rHSt6DU+mIIuB
+rYFocH4ujp0B1VyIjT0RxM227L7MAAABUp0mwQkAAAQDAEcwRQIgequqjt1sy5zl
+gCK93rW9xs6YxLs1bCfp96HIYhZ49kACIQDhjtfaakCmfkQ9UDMBp7WpE1kA4PFl
+jNIZnsUqdf4meAB1AKS5CZC0GFgUh7sTosxncAo8NZgE+RvfuON3zQ7IDdwQAAAB
+Up0mvTEAAAQDAEYwRAIgR0W9StBOqzQ85oWMWO6h/P4M+p77PJQrjgdyQlcePVUC
+IHRoUg4Ywdh9ookJITb8K9dn5MGikr7I6om9QwWNBb+6MA0GCSqGSIb3DQEBCwUA
+A4IBAQAlL/o5EhDh5lNkjJkxPzFnX4xuf2/PtyepQmlE9f0/o1ICgUgHDy2Vs2r/
+yCWyjKSl+APsd0AOuKJtxXm9s+TtHDRAysODUVhSQYLjWOZoWrpQ3d0bDhDHhy8S
+3AaqoE65tRXbZHZ7sSB95XpKgPARwn918y1Oe6aTEE8JvSV/cXVyHbng5RB2ddJP
+OFXUmh+/uLgbPQ/V4wPipTbWLDgA+D7XuyQVzCNvhPD4A8w0oBi/HxjjYMdPByoK
+LjVEmYCdw91c/h6Avm9AUK92XGXkNdiML+hBEY2YJQZghH1yz98hbqfm0x5b43GI
+Lk4ymn/K6HZMbtsrXfcWX8N3UmO5
+-----END CERTIFICATE-----
+bioklubben.sf.se:443
